--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mantine/next": "^5.10.3",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@tabler/icons": "^2.2.0",
+    "@tabler/icons-react": "^2.2.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
