--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "cookies-next": "^2.1.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
