--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^2.1.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "pdfmake": "^0.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stylis-plugin-rtl": "^2.1.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/pdfmake": "^0.2.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
