--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^2.1.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "papaparse": "^5.3.2",
     "pdfmake": "^0.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/papaparse": "^5.3.7",
     "@types/pdfmake": "^0.2.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
