--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.10.3",
+    "@mantine/form": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
     "@mantine/next": "^5.10.3",
     "@next-auth/prisma-adapter": "^1.0.5",
