--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons": "^2.2.0",
     "@tabler/icons-react": "^2.2.0",
     "@tanstack/react-query": "^4.20.0",
+    "@tanstack/react-table": "^8.7.9",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
