--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "cookies-next": "^2.1.1",
+    "install": "^0.13.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "papaparse": "^5.3.2",
