--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.10.3",
-    "@mantine/form": "^5.10.3",
-    "@mantine/hooks": "^5.10.3",
-    "@mantine/next": "^5.10.3",
+    "@mantine/core": "^6.0.2",
+    "@mantine/dates": "^6.0.2",
+    "@mantine/form": "^6.0.2",
+    "@mantine/hooks": "^6.0.2",
+    "@mantine/next": "^6.0.2",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "@tabler/icons": "^2.2.0",
@@ -27,6 +28,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.7",
     "install": "^0.13.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
