--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "next-auth": "^4.19.0",
     "papaparse": "^5.3.2",
     "pdfmake": "^0.2.7",
+    "plotly.js": "^2.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.5.0",
     "stylis-plugin-rtl": "^2.1.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
@@ -44,6 +46,7 @@
     "@types/node": "^18.11.18",
     "@types/papaparse": "^5.3.7",
     "@types/pdfmake": "^0.2.2",
+    "@types/plotly.js": "^2.12.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
