--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@trpc/server": "^10.9.0",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
+    "fast-csv": "^4.3.6",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
