--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/form": "^6.0.2",
     "@mantine/hooks": "^6.0.2",
     "@mantine/next": "^6.0.2",
+    "@mantine/notifications": "^6.0.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "@tabler/icons": "^2.2.0",
